Parse residences